[package]
name = "ode_solvers"
version = "0.2.0"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "Numerical methods to solve ordinary differential equations (ODEs) in Rust."

documentation = "https://docs.rs/ode_solvers/"
homepage = "https://srenevey.github.io/ode-solvers/"
repository = "https://github.com/srenevey/ode-solvers"
readme = "README.md"

keywords = ["ode", "math", "solver", "equations"]
categories = ["science"]

license = "BSD-3-Clause"
edition = "2018"

[dependencies]
ndarray = "0.12.1"
